--- a/my_website/aboutme.html
+++ b/my_website/aboutme.html
@@ -2,12 +2,20 @@
 <html lang="en">
    <head>
        <meta charset="utf-8">
-        <title>Home</title>
+        <title>aboutme</title>
+        <link rel="stylesheet" href="infinity.css">
     </head>
     <body>
         <a href="index.html">Home</a>
        <a href="portfolio.html">Portfolio</a>
-       <h1>This is my test Home Page!</h1>
-       <img src="images/home.jpg" height="250">
+       <a href="aboutme.html">AboutIsaac</a>
+       <p><img src="images/Giovanni.JPG"> </p>
+       <h1>Isaac Jacobo</h1>
+       <h1>Senior</h1>
+       <h1>Santa Ana High School</h1>
+       <h1>I have not taken PLTW or technology classes before.</h1>
+       <h1>The reason why I took this course is because I wanted to try something new and explore different activities.</h1>
+       <h1>For hobbies I like to play soccer and go for runs during the night.</h1>
+      
        </body>
     </html>
