--- a/my_website/index.html
+++ b/my_website/index.html
@@ -3,10 +3,12 @@
    <head>
        <meta charset="utf-8">
         <title>Home</title>
+        <link rel="stylesheet" href="infinity.css">
     </head>
     <body>
         <a href="index.html">Home</a>
        <a href="portfolio.html">Portfolio</a>
+       <a href="aboutme.html">AboutDaddy</a>
        <h1>This is my test Home Page!</h1>
        <img src="images/home.jpg" height="250">
        </body>
