--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -3,16 +3,21 @@
     <head>
         <meta charset="utf-8">
         <title>Portfolio</title>
+        <link rel="stylesheet" href="infinity.css">
     </head>
     <body>
         <a href="index.html">Home</a>
         <a href="portfolio.html">Portolio</a>
+        <a href="aboutme.html">AboutIsaac</a>
         <h1>This is my Portfolio Page!</h1>
         <img src="images/portfolio.jpg" height="250">
         <br>
         <a target="blank" href="https://scratch.mit.edu">
             <img src="images/scratchlogo.png" height="100">
             </a>
+            <a href="tables.html">Tables</a>
+            <p> <img src="images/tables.png">
+            </p>
             </body>
             </html>
 
